--- a/server/views/users.html
+++ b/server/views/users.html
@@ -4,8 +4,6 @@
 	<title>首页</title>
 </head>
 <body>
-<div id="root"></div>
-
-<script type="text/javascript" src="/main.js"></script>
+<p>users</p>
 </body>
 </html>
